<?xml version="1.0" encoding="utf-8"?><!--
  ~ The contents of this file are subject to the OpenMRS Public License
  ~ Version 1.0 (the "License"); you may not use this file except in
  ~ compliance with the License. You may obtain a copy of the License at
  ~ http://license.openmrs.org
  ~
  ~ Software distributed under the License is distributed on an "AS IS"
  ~ basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing rights and limitations
  ~ under the License.
  ~
  ~ Copyright (C) OpenMRS, LLC.  All Rights Reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.openmrs.mobile.activities.ACBaseActivity">


    <item
        android:id="@+id/syncedPatientsActivity"
        android:icon="@drawable/ic_search"
        android:title="@string/dashboard_search_icon_label" />

    <item
        android:id="@+id/activeVisitsActivity"
        android:icon="@drawable/ic_visits"
        android:title="@string/dashboard_visits_icon_label" />

    <item
        android:id="@+id/actionLocation"
        android:icon="@drawable/ic_location"
        android:title="@string/action_location" />
    <item
        android:id="@+id/actionSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings" />
</menu>
