<?xml version="1.0" encoding="utf-8"?><!--
  ~ The contents of this file are subject to the OpenMRS Public License
  ~ Version 1.0 (the "License"); you may not use this file except in
  ~ compliance with the License. You may obtain a copy of the License at
  ~ http://license.openmrs.org
  ~
  ~ Software distributed under the License is distributed on an "AS IS"
  ~ basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing rights and limitations
  ~ under the License.
  ~
  ~ Copyright (C) OpenMRS, LLC.  All Rights Reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BackgroundThemeEEE"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/lastVitalsNoneLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/last_vitals_none_label"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lastVitalsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lastVitalsLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/last_vitals_label" />

                    <TextView
                        android:id="@+id/lastVitalsDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical|center_horizontal" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/form_edit_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ico_edit"
                    android:contentDescription="@string/edit_form" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/vitalsDetailsContent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>

